Update license, gitignore and documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,18 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Emacs
+auto-save-list
+custom.el
+url/
+.org-id-locations
+\#*
+org-mode-config.el
+*~
+.#*
+\#*\#
+*.log
+.DS_Store
+org-clock-save.el
+emacs-config.el
